fixtures/python/test_double/should_fail/runtime_fake.py
class FakeUserRepository:
    def get(self, user_id: str) -> dict:
        return {"id": user_id}
